[gd_scene load_steps=2 format=3 uid="uid://cp7v3lhjxqiom"]

[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="1_fehxq"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fehxq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.0235294, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="Labes" type="VBoxContainer" parent="GridContainer/HBoxContainer"]
layout_mode = 2

[node name="ShowFpsLabel" type="Label" parent="GridContainer/HBoxContainer/Labes"]
layout_mode = 2
text = "Show FPS"

[node name="ShowPlayerLifebarLabel" type="Label" parent="GridContainer/HBoxContainer/Labes"]
layout_mode = 2
text = "Show player lifebar"

[node name="ShowEnemiesLifebarLabel" type="Label" parent="GridContainer/HBoxContainer/Labes"]
layout_mode = 2
text = "Show enemies lifebar"

[node name="ShowDamageTakenLabel" type="Label" parent="GridContainer/HBoxContainer/Labes"]
layout_mode = 2
text = "Show damage taken
"

[node name="ShowDamageGivenLabel" type="Label" parent="GridContainer/HBoxContainer/Labes"]
layout_mode = 2
text = "Show damage given"

[node name="Checks" type="VBoxContainer" parent="GridContainer/HBoxContainer"]
layout_mode = 2

[node name="ShowFpsCB" type="CheckBox" parent="GridContainer/HBoxContainer/Checks"]
layout_mode = 2

[node name="ShowPlayerLifebarCB" type="CheckBox" parent="GridContainer/HBoxContainer/Checks"]
layout_mode = 2

[node name="ShowEnemiesLifebarCB" type="CheckBox" parent="GridContainer/HBoxContainer/Checks"]
layout_mode = 2

[node name="ShowDamageTakenCB" type="CheckBox" parent="GridContainer/HBoxContainer/Checks"]
layout_mode = 2

[node name="ShowDamageGivenCB" type="CheckBox" parent="GridContainer/HBoxContainer/Checks"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_button_pressed"]
